[package]
name = "sensors"
version = "0.1.0"
authors = ["Harshvardhan1809 <harrygarry2002@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
harness = false
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
incremental= true
opt-level = "z"

experimental = ["esp-idf-svc/experimental"]

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", rev = "2728b85" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
nb = "1.1.0"
mpu6050 = "0.1.6"
ina219 = "0.2.0"
anyhow = "1.0.95"
ds18b20 = "0.1.1"
one-wire-bus = "0.1.1"
embedded-hal = { version = "0.2.7" }

[build-dependencies]
embuild = "0.32"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
